--- a/style.css
+++ b/style.css
@@ -1,20 +1,30 @@
-body{
-background-color: #965c5c;
-}
-
 .container {
-    background-image: url('./Assets/Images/Idukki-waterfalls.avif');
-    background-size: cover;
-    background-position: center;
-    text-align: center; /* Center text within container */
-    text-shadow: rgb(211, 128, 128);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-    background-color: #f5f5f5;
+  background-image: url('./Assets/Images/Idukki-waterfalls.avif');
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  color: white;
+  font-size: 20px;
+  font-weight: 600;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+  text-shadow: rgb(211, 128, 128);
+  margin: 0;
   }
+
+.navbar {
+  position: fixed;
+}
 
   h1 {
     font-size: 50px;
